--- a/ppij_web_aplikacija/Views/Instrukcije/Instrukcija.cshtml
+++ b/ppij_web_aplikacija/Views/Instrukcije/Instrukcija.cshtml
@@ -6,82 +6,105 @@
     <title>@ViewBag.Title</title>
 </head>
 <body>
-    <h3>Biranje instrukcije</h3>
-    <hr />
     @using (Html.BeginForm())
     {
-        <div class="form-group">
-            @Html.LabelFor(model => model.Datum)
-            @Html.EditorFor(model => model.Datum, new { htmlAttributes = new { id = "date" } })
+        <div class="col-md-12 row">
+            <div class="col-md-2"></div>
+            <div class="col-md-8">
+                <div class="col-md-2">
+                    <hr />
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Datum)
+                        @Html.EditorFor(model => model.Datum, new { htmlAttributes = new { id = "date", } })
+                    </div>
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.OdabraniSatID)
+                        @Html.DropDownListFor(m => Model.OdabraniSatID, Model.Sati)
+                    </div>
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.OdabranoTrajanjeID)
+                        @Html.DropDownListFor(m => Model.OdabranoTrajanjeID, Model.Trajanja)
+                    </div>
+                    <input type="submit" name="naredba" value="Traži">
+                    <hr />
+                    <div class="form-group">
+                        Tražilica:
+                        <div class="form-group">
+                            @Html.LabelFor(m => Model.Ime)
+                            @Html.TextBoxFor(m => Model.Ime)
+                        </div>
+                        <div class="form-group">
+                            @Html.LabelFor(m => Model.Prezime)
+                            @Html.TextBoxFor(m => Model.Prezime)
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <table id="instrukcije" class="tablesorter table table-hover table-bordered" style="width:10%">
+                        <thead>
+                            <tr>
+                                <th>Ime</th>
+                                <th>Prezime</th>
+                                <th>Ocjena</th>
+                                <th>Cijena (KN)</th>
+                                <th>Broj instrukcija</th>
+                                <th>Lokacija</th>
+                                <th>Status</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var opis in Model.Opisi)
+                            {
+                                <tr class=@if(opis.Status == "SLOBODAN") { <text>info</text> }
+                                    @if (opis.Status == "POSLAN") { <text>success</text> }
+                                    @if (opis.Status == "NEDOSTUPAN") { <text> warning</text> }
+                                    @if (opis.Status == "REZERVIRAN") { <text> danger</text> }>
+                                    <td>@opis.Instruktor.ime_osoba</td>
+                                    <td>@opis.Instruktor.prezime_osoba</td>
+                                    <td>@opis.Ocjena</td>
+                                    <td>@opis.Cijena</td>
+                                    <td>@opis.BrojInstrukcija</td>
+                                    <td>@Html.DropDownList("lokacija:" + opis.Instruktor.ID_osoba, opis.SelectListLokacija)</td>
+                                    @if (opis.Status == "POSLAN")
+                                    {
+                                        <td>
+                                            <button class="btn btn-success" disabled="disabled">
+                                                Poslan
+                                            </button>
+                                        </td>
+}
+                                    else if (opis.Status == "SLOBODAN")
+                                    {
+                                        <td>
+                                            <button class="btn btn-info" type="submit" name="naredba" value=@(opis.Instruktor.ID_osoba)>
+                                                Slobodan
+                                            </button>
+                                        </td>
+}
+                                    else if (opis.Status == "NEDOSTUPAN")
+                                    {
+                                        <td>
+                                            <button class="btn btn-warning" disabled="disabled">
+                                                Nedostupan
+                                            </button>
+                                        </td>
+}
+                                    else if (opis.Status == "REZERVIRAN")
+                                    {
+                                        <td>
+                                            <button class="btn btn-danger" disabled="disabled">
+                                                Rezerviran
+                                            </button>
+                                        </td>
+}
+                                </tr>
+}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <div class="col-md-2"></div>
         </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.OdabraniSatID)
-            @Html.DropDownListFor(m => Model.OdabraniSatID, Model.Sati)
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.OdabranoTrajanjeID)
-            @Html.DropDownListFor(m => Model.OdabranoTrajanjeID, Model.Trajanja)
-        </div>
-        <input type="submit" name="naredba" value="Traži">
-
-    <hr />
-    <table id="instrukcije" class="tablesorter">
-        <thead>
-            <tr>
-                <th>Ime</th>
-                <th>Prezime</th>
-                <th>Ocjena</th>
-                <th>Cijena (KN)</th>
-                <th>Broj instrukcija</th>
-                <th>Lokacija</th>
-                <th>Status</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var opis in Model.Opisi)
-            {
-                <tr>
-                    <td>@opis.Instruktor.ime_osoba</td>
-                    <td>@opis.Instruktor.prezime_osoba</td>
-                    <td>@opis.Ocjena</td>
-                    <td>@opis.Cijena</td>
-                    <td>@opis.BrojInstrukcija</td>
-                    <td>@Html.DropDownList("lokacija:" + opis.Instruktor.ID_osoba, opis.SelectListLokacija)</td>
-                    @if (opis.Status == "POSLAN")
-                    {
-                        <td>Zahtjev poslan</td>
-                    }
-                    else if (opis.Status == "SLOBODAN")
-                    {
-                        <td>
-                            <button type="submit" name="naredba" 
-                                    value=@(opis.Instruktor.ID_osoba)>Pošalji zahtjev</button>
-                        </td>
-                    }
-                    else if (opis.Status == "NEDOSTUPAN")
-                    {
-                        <td>Termin nedostupan</td>
-                    }
-                    else if (opis.Status == "REZERVIRAN")
-                    {
-                        <td>Termin rezerviran</td>
-                    }
-                </tr>
-            }
-        </tbody>
-    </table>
-    <hr />
-    <div class="form-group">
-        Tražilica:
-        <div class="form-group">
-            @Html.LabelFor(m => Model.Ime)
-            @Html.TextBoxFor(m => Model.Ime)
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => Model.Prezime)
-            @Html.TextBoxFor(m => Model.Prezime)
-        </div>
-    </div>
     }
 </body>
 </html>
@@ -97,7 +120,7 @@
                 dateFormat: "dd/MM/yy",
                 changeMonth: true,
                 changeYear: true,
-                minDate: "dateToday",
+                minDate: 1,
                 yearRange: "-0:+1"
             });
 
@@ -105,7 +128,7 @@
     </script>
 
     @Scripts.Render("~/bundles/jquery_tablesorter")
-    @Styles.Render("~/Content/css_jquery_tablesorter")
+    @*@Styles.Render("~/Content/css_jquery_tablesorter")*@
 
     <script type="text/javascript">
         $(document).ready(function () {
